[package]
name = "aio"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { path = "/home/al/pro/repo/global/tokio/tokio", features = ["signal", "rt-core", "udp"] }
