[package]
name = "collections"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["slicemap", "multimap"]
serde_derive = ["serde/derive"]
slicemap = ["serde_derive"]
multimap = ["serde_derive"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
shared = { path = "../shared" }
bitvec = "*"
