[package]
name = "collections"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["all"]
all = ["map", "multimap", "slicemap", "trie", "list", "serde_derive"]
serde_derive = ["serde/derive"]
sync = ["shared"]
map = []
multimap = []
slicemap = []
trie = []
list = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
shared = { path = "../shared", optional = true }
