[package]
name = "collections"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["all"]
all = ["btree", "multimap", "slicemap", "trie", "list", "serde_derive", "sync"]
serde_derive = ["serde/derive"]
sync = ["shared"]
btree = []
multimap = []
slicemap = []
trie = ["btree"]
list = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
shared = { path = "../shared", optional = true }
