[package]
name = "convert"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
convert_derive = { path = "derive", optional = true }

[features]
default = ["integer", "any", "derive"]
integer = []
any = []
derive = ["convert_derive"]